# pyStorages

./: README.md  TODO.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/storages/: __init__.py  json_storage.py  pickle_storage.py  redis_storage.py  types.py
src/storages/async_storages/: __init__.py  base_nosql_storage.py  json_storage.py  pickle_storage.py  redis_storage.py
src/storages/sync_storages/: __init__.py  base_nosql_storage.py  json_storage.py  pickle_storage.py  redis_storage.py
