[build-system]
requires = ["setuptools>=60.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "storages"
version = "0.0.1"
authors = [
  { name="Konstantin Ostashenko", email="ostashenkokd@gmail.com" },
]
description = "Simple data storages package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Cub11k/storages"
